--- a/views/documents/datasets.pug
+++ b/views/documents/datasets.pug
@@ -9,41 +9,41 @@ block content
           label(style='font-size:small;') Connected as: <b>#{current_user.username}</b> (#{current_user.role.label}, #{current_user.organisation.name})
         else
           label(style='font-size:small;') 
-            a(href=root + 'signup') Sign up 
+            a(href=conf.root + 'signup') Sign up 
             | or 
-            a(href=root + 'signin') Sign in 
+            a(href=conf.root + 'signin') Sign in 
             | to access DataSeer
       div(id='navbar-lg')
         ul(style='padding-left: 15px;')
           li
-            img(src=root + 'img/DataSeer-logo-min.png' width='25')
+            img(src=conf.root + 'img/DataSeer-logo-min.png' width='25')
           
           if current_user && !useDocumentToken
             li
-              a(href=root + 'myDocuments' class='nav') My documents
+              a(href=conf.root + 'myDocuments' class='nav') My documents
 
             if current_user.role.label === 'curator' || current_user.role.label === 'annotator'
               li
-                a(href=root + 'documents' class='nav') All documents
+                a(href=conf.root + 'documents' class='nav') All documents
             li
-              a(href=root + 'backoffice/upload' class='nav') Upload
+              a(href=conf.root + 'backoffice/upload' class='nav') Upload
             if current_user.role.label === 'curator'
               li
-                a(href=root + 'backoffice/accounts' class='nav') Accounts
+                a(href=conf.root + 'backoffice/accounts' class='nav') Accounts
             if current_user.role.label === 'curator'
               li
-                a(href=root + 'backoffice/organisations' class='nav') Organizations
+                a(href=conf.root + 'backoffice/organisations' class='nav') Organizations
             li
-              a(href=root + 'settings' class='nav') Settings
+              a(href=conf.root + 'settings' class='nav') Settings
             li
-              a(href=root + 'signout' class='nav') Sign out
+              a(href=conf.root + 'signout' class='nav') Sign out
           else
             li
-              a(href=root + 'signup' class='nav') Sign up
+              a(href=conf.root + 'signup' class='nav') Sign up
             li
-              a(href=root + 'signin' class='nav') Sign in
+              a(href=conf.root + 'signin' class='nav') Sign in
             li
-              a(href=root + 'forgotPassword' class='nav') Forgot password
+              a(href=conf.root + 'forgotPassword' class='nav') Forgot password
 
   div(class='row' style='margin-bottom:5px;')
     div(class='col-12')
