--- a/views/backoffice/upload.pug
+++ b/views/backoffice/upload.pug
@@ -13,7 +13,7 @@ block content
         div(style='margin-top:10px;margin-left:10px;') Supported formats are PDF, JATS/NLM, TEI XML, publisher XML formats for ScholarOne, BMJ, Elsevier (staging format), NPG (Nature), OUP, PNAS, RSC, Sage, Springer and Wiley.
 
         div(class='container-fluid')
-          form(ref='uploadForm' id='uploadForm' action=root+route method='post' encType='multipart/form-data')
+          form(ref='uploadForm' id='uploadForm' action=conf.root+route method='post' encType='multipart/form-data')
             div(class='row')
               div(class='col-12')
                 label(for='file') Upload you file here
