fix: fix mail tpl

--- a/conf/mails/uploadDocument.txt.pug
+++ b/conf/mails/uploadDocument.txt.pug
@@ -5,7 +5,7 @@
 | 
 | Summary:
 | - uploaded by: #{uploader}
-| - owner: #{opts.email}
-| - journal: #{opts.journal}
+| - owned by: #{opts.email}
+| - will be sent to: #{opts.journal}
 | 
 | This email has been automatically generated
