--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -95,6 +95,16 @@ body {
   margin-bottom: 12px; /* Add some space below the input */
 }
 
+#previous_skip {
+  float: right;
+  margin-top: 5px;
+}
+
+#next_skip {
+  float: left;
+  margin-top: 5px;
+}
+
 .accounts .form-group > * {
   margin-left: 10px;
   display: inline-block;
