--- a/views/backoffice/organisations.pug
+++ b/views/backoffice/organisations.pug
@@ -18,7 +18,7 @@ block content
           div(class='row')
             div(class='col-12 text-center' style='margin-top:10px;')
               form#new-organisation(role='form', action=conf.root + route,method='post')
-                input(type='text' name='name' placeholder='Name of new organization')
+                input.form-control(style='display: inline-block; width: auto;' type='text' name='name' placeholder='Name of new organization')
                 button.blue.btn.btn-primary.waves-effect.waves-light(type='submit' name='create') Add
   
   div(class='container-fluid')
@@ -32,12 +32,19 @@ block content
             div(class='col-12 text-center')
               form#custom-search(role='form', action=conf.root + route,method='get')
                 div limit: 
-                  input(type='text' name='limit' placeholder='Maximum number of results')
+                  input.form-control(style='display: inline-block; width: auto;' type='text' name='limit' placeholder='Maximum number of results')
                 div
                   button.blue.btn.btn-primary.waves-effect.waves-light(type='submit') Search for organizations
           div(class='row')
             div(class='col-12 text-center')
               div(class='header') Organizations
+          div(class='row')
+            div(class='col-1')
+              button.blue.btn.btn-primary.waves-effect.waves-light(type='buttom' id='previous_skip') <
+            div(class='col-10')
+              input#search(type='text' name='name' placeholder='Search for organization name')
+            div(class='col-1')
+              button.blue.btn.btn-primary.waves-effect.waves-light(type='buttom' id='next_skip') >
           if  organisations.length === 0
             div(class='row')
               div(class='col-12 text-center')
@@ -46,9 +53,6 @@ block content
             div(class='row')
               div(class='col-12 text-center')
                 div(class='count-list') #{organisations.length} result(s)
-            div(class='row')
-              div(class='col-10 offset-1')
-                input#search(type='text' name='name' placeholder='Search for organization name')
             div(class='row head-list')
               div(class='col-12')
                 div(class='form-row')
