--- a/views/documents/all.pug
+++ b/views/documents/all.pug
@@ -30,8 +30,12 @@ block content
             div(class='col-12 text-center')
               div(class='header')  All documents
           div(class='row')
-            div(class='col-12')
+            div(class='col-1')
+              button.blue.btn.btn-primary.waves-effect.waves-light(type='buttom' id='previous_skip') <
+            div(class='col-10')
               input#search(type='text' name='username' placeholder='Search for document (doi, pmid, title, email, etc)')
+            div(class='col-1')
+              button.blue.btn.btn-primary.waves-effect.waves-light(type='buttom' id='next_skip') >
           if  documents.length === 0
             div(class='row')
               div(class='col-12 text-center')
@@ -101,6 +105,7 @@ block content
                           div(class='col-2') #{document.metadata.article_title}
                           div(class='col-1')
                             button.btn.btn-primary.waves-effect.waves-light(type='submit' name='update') Update
+                            button.btn.btn-danger.waves-effect.waves-light(type='submit' name='delete') Delete
                         else
                           div(class='col-1')
                             div(class="hidden") #{JSON.stringify(document.metadata)}
