update: enable 'Public URL' on datasets & metadata step

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -98,6 +98,7 @@ html
     script(src=conf.root + 'javascripts/pdf.js/build/generic/build/pdf.worker.js')
     script(src=conf.root + 'javascripts/lib/pdfManager.js')
     script(src=conf.root + 'javascripts/lib/pdfViewer.js')
+    script(src=conf.root + 'javascripts/publicUrl.js')
   else if backoffice
     script(src=conf.root + 'javascripts/process/backoffice.js')
   else if search
