--- a/views/documents/all.pug
+++ b/views/documents/all.pug
@@ -18,13 +18,24 @@ block content
           div(class='row')
             div(class='col-12 text-center')
               form#custom-search(role='form', action=conf.root + 'documents',method='get')
+                div Organisation: 
+                  select.custom-select(style='width: auto' name='organisation')
+                    option(value='') All
+                    each organisation in organisations
+                      option(value=organisation._id) #{organisation.name}
+                div Modified By: 
+                  select.custom-select(style='width: auto' name='user')
+                    option(value='') All
+                    each account in accounts
+                      option(value=account._id) #{account.username}
+                div(style='display:block; margin-top:10px;')
                 div pmid: 
                   input.form-control(style='display: inline-block; width: auto;' type='text' name='pmid' placeholder='pmid')
                 div doi: 
                   input.form-control(style='display: inline-block; width: auto;' type='text' name='doi' placeholder='doi')
                 div limit: 
                   input.form-control(style='display: inline-block; width: auto;' type='text' name='limit' placeholder='Maximum number of results')
-                div
+                div(style='display:block; margin-top:10px;')
                   button.btn.btn-primary.waves-effect.waves-light(type='submit') Search for documents
           div(class='row')
             div(class='col-12 text-center')
