--- a/views/documents/all.pug
+++ b/views/documents/all.pug
@@ -18,23 +18,45 @@ block content
           div(class='row')
             div(class='col-12 text-center')
               form#custom-search(role='form', action=conf.root + 'documents',method='get')
+                div Uploaded before: 
+                  input.form-control(style='display: inline-block; width: auto;' type='date' name='uploaded_before' placeholder='Uploaded before' value=(params.uploaded_before))
+                div Uploaded after: 
+                  input.form-control(style='display: inline-block; width: auto;' type='date' name='uploaded_after' placeholder='Uploaded after' value=(params.uploaded_after))
+                div(style='display:block; margin-top:10px;')
+                div Updated before: 
+                  input.form-control(style='display: inline-block; width: auto;' type='date' name='updated_before' placeholder='Updated before' value=(params.updated_before))
+                div Updated after: 
+                  input.form-control(style='display: inline-block; width: auto;' type='date' name='updated_after' placeholder='Updated after' value=(params.updated_after))
+                div(style='display:block; margin-top:10px;')
                 div Organisation: 
                   select.custom-select(style='width: auto' name='organisation')
-                    option(value='') All
+                    if (params.organisation)
+                      option(value='') All
+                    else
+                      option(value='' selected) All
                     each organisation in organisations
-                      option(value=organisation._id) #{organisation.name}
+                      if (params.organisation && params.organisation === organisation._id.toString())
+                        option(value=organisation._id selected) #{organisation.name}
+                      else
+                        option(value=organisation._id) #{organisation.name}
                 div Modified By: 
                   select.custom-select(style='width: auto' name='user')
-                    option(value='') All
+                    if (params.organisation)
+                      option(value='') All
+                    else
+                      option(value='' selected) All
                     each account in accounts
-                      option(value=account._id) #{account.username}
+                      if (params.account && params.account === account._id.toString())
+                        option(value=account._id selected) #{account.username}
+                      else
+                        option(value=account._id) #{account.username}
                 div(style='display:block; margin-top:10px;')
                 div pmid: 
-                  input.form-control(style='display: inline-block; width: auto;' type='text' name='pmid' placeholder='pmid')
+                  input.form-control(style='display: inline-block; width: auto;' type='text' name='pmid' placeholder='pmid' value=(params.pmid))
                 div doi: 
-                  input.form-control(style='display: inline-block; width: auto;' type='text' name='doi' placeholder='doi')
+                  input.form-control(style='display: inline-block; width: auto;' type='text' name='doi' placeholder='doi' value=(params.doi))
                 div limit: 
-                  input.form-control(style='display: inline-block; width: auto;' type='text' name='limit' placeholder='Maximum number of results')
+                  input.form-control(style='display: inline-block; width: auto;' type='text' name='limit' placeholder='Maximum number of results' value=(params.limit))
                 div(style='display:block; margin-top:10px;')
                   button.btn.btn-primary.waves-effect.waves-light(type='submit') Search for documents
           div(class='row')
