--- a/conf/mails/uploadDocument.html.pug
+++ b/conf/mails/uploadDocument.html.pug
@@ -1,10 +1,8 @@
 p Hi,
-<br/>
 p New document uploaded on DataSeer Web: <a href="#{url}">click here</a>
-<br/>
-p Summary:
-p - uploaded by: #{uploader}
-p - owned by: #{opts.email}
-p - will be sent to: #{opts.journal}
+ul
+  li uploaded by: #{uploader}
+  li owned by: #{opts.email}
+  li will be sent to: #{opts.journal}
 <br/>
 p This email has been automatically generated
