--- a/views/documents/finish.pug
+++ b/views/documents/finish.pug
@@ -7,7 +7,14 @@ block content
     if current_user
         if document
           if document.status !== 'metadata'
-            button#reopen_document.btn.btn-primary Reopen document
+            button.blue.btn.btn-primary.waves-effect.waves-light#reopen_document.btn.btn-primary
+             <i class="fas fa-undo-alt"></i> Reopen document
+            button.blue.btn.btn-primary.waves-effect.waves-light(type='button' id='getPublicURL' style='margin-left:10px;' title='Copy URL to clipboard')
+              <i class="fas fa-link"></i> Get public URL of this document
+            input.form-control.hidden(type='text' id='public_url' name='public_url' value=publicURL)
+            a(href='mailto:?subject='+ encodeURIComponent(mail.subject) + '&body=' + encodeURIComponent(mail.body) target='_blank')
+              button.blue.btn.btn-primary.waves-effect.waves-light(type='button' id='getPublicURL' style='margin-left:10px;' title='Send URL by email')
+                <i class="far fa-envelope"></i> Share with colleague
 
     if document.isDataSeer
       
@@ -64,11 +71,14 @@ block content
                 ul
                   each val, index in document.metadata.authors
                     if val.name
-                      li #{val.name}
-                        ul
-                          if val.name && val.affiliations
-                            each aff, index in val.affiliations
-                              li #{aff}
+                      if (val.email)
+                        <li> #{val.name} (<strong>#{val.email}</strong>)
+                      else
+                        li #{val.name}
+                      ul
+                        if val.name && val.affiliations
+                          each aff, index in val.affiliations
+                            li #{aff}
         div(class='col-12')
           div(class='key d-inline font-weight-bold') Title: 
           div(class='value d-inline') #{document.metadata.article_title}
