update: improve accounts token management

--- a/views/layout.pug
+++ b/views/layout.pug
@@ -99,10 +99,11 @@ html
     script(src=conf.root + 'javascripts/lib/pdfManager.js')
     script(src=conf.root + 'javascripts/lib/pdfViewer.js')
     script(src=conf.root + 'javascripts/publicUrl.js')
-  else if backoffice
-    script(src=conf.root + 'javascripts/process/backoffice.js')
   else if search
     script(src=conf.root + 'javascripts/search.js')
+
+  if route === 'backoffice/accounts'
+    script(src=conf.root + 'javascripts/process/backoffice.js')
 
   if route === 'documents/:id/metadata'
     script(src=conf.root + 'javascripts/process/metadata.js')
