--- a/views/backoffice/accounts.pug
+++ b/views/backoffice/accounts.pug
@@ -101,13 +101,20 @@ block content
                             option(value=organisation._id) #{organisation.name}
                     if account.tokens.api
                       div(class='col-2')
-                        input.form-control(type='text' id='apiToken' name='apiToken' value=account.tokens.api)
+                        input.hidden(type='text' name='apiToken' value=account.tokens.api)
+                        button.blue.btn.btn-primary.waves-effect.waves-light(name='copy_token' data-account=account._id title='Copy the token to clipboard')
+                          <i class="fas fa-copy"></i>
+                        button.blue.btn.btn-primary.waves-effect.waves-light(type='submit' name='generate_token' title='Generate a new token')
+                          <i class="fas fa-sync-alt"></i>
+                        button.btn.btn-danger.waves-effect.waves-light(type='submit' name='revoke_token' title='Revoke the token')
+                          <i class="far fa-trash-alt"></i>
                     else
                       div(class='col-2')
-                        div This user does not have a token
+                        button.blue.btn.btn-primary.waves-effect.waves-light(type='submit' name='generate_token' title='Create a new token')
+                          <i class="fas fa-plus"></i>
                     div(class='col-2')
-                      button.blue.btn.btn-primary.waves-effect.waves-light(type='submit' name='update') Update
-                      button.blue.btn.btn-primary.waves-effect.waves-light(type='submit' name='generate_token') New Token
+                      button.blue.btn.btn-primary.waves-effect.waves-light(type='submit' name='update')
+                        <i class="far fa-save"></i> Save account
 
           div(class='row')
             div(class='col-12' style='margin-top:20px;')
