--- a/views/documents/all.pug
+++ b/views/documents/all.pug
@@ -160,10 +160,12 @@ block content
                           div(class='col-1') #{document.metadata.journal}
                           div(class='col-2') #{document.metadata.article_title}
                           div(class='col-1')
-                            button.btn.btn-primary.waves-effect.waves-light(type='submit' name='update')
+                            button.btn.btn-primary.waves-effect.waves-light(type='submit' name='update' title='Update this document')
                               <i class="far fa-save"></i>
-                            button.btn.btn-danger.waves-effect.waves-light(type='submit' name='delete')
+                            button.btn.btn-danger.waves-effect.waves-light(type='submit' name='delete' title='Delete this document')
                               <i class="far fa-trash-alt"></i>
+                            button.blue.btn.btn-primary.waves-effect.waves-light(type='submit' name='generate_token' title='Generate a new token')
+                              <i class="fas fa-sync-alt"></i>
                         else
                           div(class='col-1')
                             div(class="hidden") #{JSON.stringify(document.metadata)}
