fix: fix issue https://github.com/DataSeer/dataseer-web/issues/229

--- a/views/documents/finish.pug
+++ b/views/documents/finish.pug
@@ -103,7 +103,7 @@ block content
 
             div(class='row row-margin')
               div(class='col-12')
-                div(class='value d-block font-weight-bold') Dataset #{index}:
+                div(class='value d-block font-weight-bold') Dataset #{index+1}:
               div(class='col-12')
                 div(class='value d-inline') Data Type: 
                 if dataset.subType !== ''
